# snake-game

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  testing.md  textual_ui_plan.md  troubleshooting.md
docs/superpowers/plans/: 2026-04-13-menu-screens-settings-plan.md  2026-04-16-menu-screens-settings.md
docs/superpowers/specs/: 2026-04-13-menu-screens-settings-design.md
src/snake_game/: __init__.py  __main__.py  cli.py  core.py  core.pyi  game.py  pygame_ui.py  settings.py  textual_ui.py
tests/: conftest.py  test_cli.py  test_core.py  test_game.py  test_pygame_ui.py  test_settings.py  test_support.py  test_textual_ui.py
